--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
               <img class="rounded" src="./assets/method_workflow.png" style="max-width: 700px; height: auto; width: auto;">
               <br><br>
               <span class="description" align="center">
-              We introduce a novel framework that adapts alignment techniques from large language models to parametric CAD constraint generation. Our method employs iterative training with constraint solver feedback, combining supervised fine-tuning (SFT) with reinforcement learning from human feedback (RLHF) techniques including Direct Preference Optimization (DPO) and Reinforce Leave-One-Out (RLOO). This alignment process ensures that generated constraints not only satisfy geometric requirements but also capture the underlying design intent, resulting in sketches that remain editable and predictable as parameters change.
+              We introduce a novel framework that adapts alignment techniques from large language models to parametric CAD constraint generation. Our method employs iterative training with constraint solver feedback, combining supervised fine-tuning (SFT) with reinforcement learning from human feedback (RLHF) techniques including Direct Preference Optimization (DPO), Expert Iteration (ExIT), and Reinforce Leave-One-Out (RLOO). This alignment process ensures that generated constraints not only satisfy geometric requirements but also capture the underlying design intent, resulting in sketches that remain editable and predictable as parameters change.
               </span>
             </center>
           </td>
@@ -548,7 +548,7 @@
     <div class="gallery-section">
       <center>
         <h1>Results Gallery</h1>
-        <p>Explore detailed comparisons between different alignment methods across varying difficulty levels</p>
+        <p>Explore detailed comparisons between different alignment methods across varying difficulty levels. Click on an image to view the full comparison.</p>
         
         <!-- Filter buttons -->
         <div class="filter-controls">
