--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         <img class="rounded" src="./assets/teaser-hd.png" style="max-width: 1000px; height: auto; width: auto;">
         <br>
         <span class="description" align="center">
-        We bridge alignment techniques from large language models to CAD design, ensuring that generated constraints accurately capture what designers intend rather than just what is geometrically correct.
+        By training constraint generation models with feedback from CAD solvers, we align AI systems to produce constraints that capture what designers intend—bridging alignment strategies from language models to engineering design."
         </span>
         <br>
     </center>
@@ -534,7 +534,7 @@
               <img class="rounded" src="./assets/method_workflow.png" style="max-width: 700px; height: auto; width: auto;">
               <br><br>
               <span class="description" align="center">
-              We introduce a novel framework that adapts alignment techniques from large language models to parametric CAD constraint generation. Our method employs iterative training with constraint solver feedback, combining supervised fine-tuning (SFT) with reinforcement learning from human feedback (RLHF) techniques including Direct Preference Optimization (DPO), Expert Iteration (ExIT), and Reinforce Leave-One-Out (RLOO). This alignment process ensures that generated constraints not only satisfy geometric requirements but also capture the underlying design intent, resulting in sketches that remain editable and predictable as parameters change.
+              We introduce a novel framework that adapts alignment techniques from large language models to parametric CAD constraint generation. Our method employs iterative training with constraint solver feedback, combining supervised fine-tuning (SFT) with reinforcement learning from human feedback (RLHF) techniques including Direct Preference Optimization (DPO), Expert Iteration (ExIT), and Reinforce Leave-One-Out (RLOO). 
               </span>
             </center>
           </td>
