--- a/index.html
+++ b/index.html
@@ -478,10 +478,10 @@
     <br>
 
     <center>
-        <img class="rounded" src="./assets/teaser-hd.png" style="max-width: 1000px; height: auto; width: auto;">
+        <img class="rounded" src="./assets/teaser-hd.png" style="max-width: 800px; height: auto; width: auto;">
         <br>
-        <span class="description" align="center">
-        By training constraint generation models with feedback from CAD solvers, we align AI systems to produce constraints that capture what designers intend—bridging alignment strategies from language models to engineering design."
+        <span class="description" align="center" style="max-width: 850px; height: auto; width: auto;">
+        We post-train constraint generation models using solver feedback as reward signals, aligning them to remove all degrees of freedom (fully-constrained) while avoiding under-constraining, over-constraining, and solve failures -- a key first step towards useful auto-constraining that preserves design intent.
         </span>
         <br>
     </center>
@@ -548,7 +548,9 @@
     <div class="gallery-section">
       <center>
         <h1>Results Gallery</h1>
-        <p>Explore detailed comparisons between different alignment methods across varying difficulty levels. Click on an image to view the full comparison.</p>
+        <span class="description" align="center" style="max-width: 1000px; height: auto; width: auto;">
+        Explore detailed comparisons between different alignment methods across varying difficulty levels. Click on an image to view the full comparison.
+        </span>
         
         <!-- Filter buttons -->
         <div class="filter-controls">
