--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         <img class="rounded" src="./assets/teaser-hd.png" style="max-width: 800px; height: auto; width: auto;">
         <br>
         <span class="description" align="center" style="max-width: 850px; height: auto; width: auto;">
-        We post-train constraint generation models using solver feedback as reward signals with the goal of aligning them to remove all degrees of freedom (fully-constrained) while avoiding geometric distortion, over-constraining, and solve failures -- a key first step towards useful auto-constraining that preserves design intent.
+        We post-train constraint generation models using solver feedback with the goal of aligning them to remove all degrees of freedom (fully-constrained) while avoiding geometric distortion, over-constraining, and solve failures -- a key first step towards useful auto-constraining that preserves design intent.
         </span>
         <br>
     </center>
